<resources>
    <string name="app_name">Shujaat Arbaz</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="developer_by_shujaat_arbaz">Developed By: Shujaat Arbaz</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_text">Login...</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="logout">LogOut</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello There! </string>
    <string name="nav_header_subtitle">Shujaat.Arbaz@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>

</resources>